Bug 324257 - Keyboard backlight brightness not working ux32vd
Summary: Keyboard backlight brightness not working ux32vd
Status: RESOLVED FIXED
Alias: None
Product: solid
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 4.11.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Alex Fiestas
URL:
Keywords:
: 327935 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-08-30 08:03 UTC by Artur O.
Modified: 2014-09-12 12:13 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
lspci (3.08 KB, text/plain)
2013-08-30 08:04 UTC, Artur O.
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Artur O. 2013-08-30 08:03:46 UTC
The keyboard brightness up/down (FN kombo) on the Asus ux32vd is not working at all.

Reproducible: Always




Up to date Archlinux
Linux 3.10.9

Using asuskbd from arch AUR then using hotkey to use that application to switch brightness works. But should this not work out of the box with current KDE packages?

Works on Gnome, but the above is just an assumption on my end.
Comment 1 Artur O. 2013-08-30 08:04:29 UTC
Created attachment 82028 [details]
lspci

lspci -k ux32vd
Comment 2 Lasse Liehu 2013-10-29 01:08:58 UTC
Here it works out of the box, but not when logging in the first time after booting. So one way to get it working is to log in, out and then in again.

It seems that also just restarting the power management service from System Settings works.

Using KDE SC 4.11.2 on Arch Linux.
Comment 3 Romain D. 2014-01-17 13:00:43 UTC
Interestingly, I have a similar experience with mine: after a login, the PowerManagement applet doesn't allow me to select the keyboard brightness (and doesn't show me the associated slider either) nor am I able to control it using the fn keys.
But if I kill kded4 and restart it, then kde detects my keyboard and then allows me to use the kbd shortcuts so select a brightness level. Then if I kill and restart plasma-desktop, the appropriate slider shows up in the applet.
There must be an issue/timeout during the (first) kded4 initialization process that prevents a proper detection of this keyboard, gnome remains unaffected.
Comment 4 Romain D. 2014-01-17 13:03:03 UTC
(In reply to comment #3)
> Interestingly, I have a similar experience with mine

Forgot to mention that this bug was present on 4.10 , 4.11 and still there on 4.12.
Currently using fedora 20, kernel 3.12.7-300.fc20.x86_64
Comment 5 Artur O. 2014-01-27 07:17:33 UTC
Hm forgot to pick up on this bug.

This now works on my UX32VD laptop. Haven't seen any issues you guys describe though. This was fixed for me a while ago, cannot really say what update did it.
Comment 6 Alex Fiestas 2014-03-08 00:20:15 UTC
*** Bug 327935 has been marked as a duplicate of this bug. ***
Comment 7 Alex Fiestas 2014-03-08 00:23:45 UTC
Git commit ab1a7e572d0809e3333e58d14016d25f6c3c1883 by Àlex Fiestas.
Committed on 08/03/2014 at 00:21.
Pushed by afiestas into branch 'KDE/4.11'.

Fix keyboard birghtness handling in some systems

Handle the dbus reply better so we don't get unexpected results.
Also, initialize the variable.

M  +6    -2    powerdevil/daemon/backends/upower/powerdevilupowerbackend.cpp

http://commits.kde.org/kde-workspace/ab1a7e572d0809e3333e58d14016d25f6c3c1883
Comment 8 Max 2014-09-12 12:13:16 UTC
KDE 4.13.3 Fedora 20 (x86_64). Problem is here again. File /sys/class/leds/asus::kbd_backlight/brightness exists and it is possible to control keyboard brightness through it, but keyboard shortcuts for this don't work in KDE. Buttons are recognized, I can set them to control brightness via systemsettings, but KDE just does nothing when I press those buttons.