Fix keyboard birghtness handling in some systems

Handle the dbus reply better so we don't get unexpected results.
Also, initialize the variable.

BUG:324257